<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/def_pagePadding"
    android:background="@drawable/backgroundnodude"
    tools:context="com.sportify.editEvent.activity.activity.EditEventActivity">


    <!-- TODO remember the milk -->


    <TextView
        android:id="@+id/editEventHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header"
        android:textColor="@color/colorCrystalWhite"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:text="@string/edit_event"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/backToEventButton"
        android:backgroundTint="@color/colorCrystalWhite"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:clickable="true"
        app:fabSize="mini"
        android:onClick="goToEventAreaFromEditButton"
        app:srcCompat="@drawable/chevleft" />



    <EditText
        android:id="@+id/etEditEventName"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:ems="8"
        android:textSize="@dimen/inputeSize"
        android:hint="@string/event_name"
        android:layout_above="@+id/etEditEventPlace"
        android:layout_alignStart="@+id/etEditEventPlace" />

    <CheckBox
        android:id="@+id/cbEditEventPrivate"
        android:layout_width="78dp"
        android:layout_height="22dp"
        android:text="@string/event_private"
        android:textColor="@color/colorPrimaryDarkGrey"
        android:layout_alignBaseline="@+id/etEditEventName"
        android:layout_alignBottom="@+id/etEditEventName"
        android:layout_toEndOf="@+id/etEditEventName" />


    <AutoCompleteTextView
        android:id="@+id/etEditEventPlace"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:ems="8"
        android:textSize="@dimen/inputeSize"
        android:inputType="textPersonName"
        android:hint="@string/event_place"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/etEditEventPrice"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/mapview2"
        android:clickable="true"
        android:layout_alignTop="@+id/etEditEventPlace"
        android:layout_toEndOf="@+id/etEditEventPlace"
        tools:ignore="ContentDescription"
        android:id="@+id/imageButton5" />


    <EditText
        android:id="@+id/etEditEventPrice"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:textSize="@dimen/inputeSize"
        android:ems="8"
        android:hint="@string/event_price"
        android:inputType="number"
        android:layout_alignTop="@+id/etEditEventStartDate"
        android:layout_alignStart="@+id/etEditEventDescription" />

    <EditText
        android:id="@+id/etEditEventStartDate"
        android:ems="8"
        android:hint="@string/event_date_hint"
        android:focusable="false"
        android:textSize="@dimen/inputeSize"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:inputType="date"
        android:layout_above="@+id/etEditEventEndTime"
        android:layout_alignEnd="@+id/etEditEventType"
        android:layout_marginBottom="17dp" />




    <EditText
        android:id="@+id/etEditEventStartTime"
        android:layout_width="103dp"
        android:textSize="@dimen/inputeSize"
        android:layout_height="44dp"
        android:ems="8"
        android:hint="@string/event_start_time"
        android:focusable="false"
        android:layout_alignBaseline="@+id/etEditEventEndTime"
        android:layout_alignBottom="@+id/etEditEventEndTime"
        android:layout_alignStart="@+id/etEditEventPrice" />


    <EditText
        android:id="@+id/etEditEventEndTime"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:ems="8"
        android:textSize="@dimen/inputeSize"
        android:hint="@string/event_end_time"
        android:focusable="false"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/etEditEventName" />

    <AutoCompleteTextView
        android:id="@+id/etEditEventType"
        android:layout_width="111dp"
        android:layout_height="38dp"
        android:ems="8"
        android:textSize="@dimen/inputeSize"
        android:focusable="false"
        android:hint="@string/event_kategori"
        android:inputType="textPersonName"
        android:layout_alignBaseline="@+id/etEditEventMaxAttendance"
        android:layout_alignBottom="@+id/etEditEventMaxAttendance"
        android:layout_alignStart="@+id/etEditEventEndTime" />

    <EditText
        android:id="@+id/etEditEventMaxAttendance"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:ems="8"
        android:textSize="@dimen/inputeSize"
        android:hint="@string/event_max_attendance"
        android:inputType="number"
        android:layout_above="@+id/etEditEventDescription"
        android:layout_alignEnd="@+id/editEventDeleteButton"
        android:layout_marginBottom="23dp" />


    <TextView
        android:id="@+id/ttViewAddPic"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:text="Byt bild"
        android:layout_below="@+id/imageButton3"
        android:layout_alignEnd="@+id/etEditEventType"
        android:onClick="eventPictureButtonClick"/>

    <!--TODO : hämta events bild -->
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/camera5"
        android:clickable="true"
        tools:ignore="ContentDescription"
        android:layout_alignTop="@+id/etEditEventDescription"
        android:layout_toStartOf="@+id/editEventHeader"
        android:onClick="eventPictureButtonClick"/>

    <EditText
        android:id="@+id/etEditEventDescription"
        android:layout_width="219dp"
        android:layout_height="113dp"
        android:background="@drawable/border"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="top"
        android:lines="2"
        android:hint="@string/event_descr_hint"
        android:textSize="@dimen/standardSmallerTextSize"
        android:inputType="textMultiLine"
        android:layout_above="@+id/editEventButton"
        android:layout_alignEnd="@+id/cbEditEventPrivate"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/editEventButton"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:onClick="editEvent"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorButton"
        android:text="@string/save_changes"
        android:textColor="@color/buttonDark"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/backToEventButton" />

    <Button
        android:id="@+id/editEventDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/buttonDark"
        android:background="@color/colorDelete"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/delete_event"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/etEditEventPrice"
        android:layout_marginStart="13dp"
        android:onClick="deleteEvent"/>


</RelativeLayout>
