<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundnodude"
    android:padding="@dimen/def_pagePadding"
    tools:context="com.sportify.createEvent.createEventPageOne.activity.CreateEventPageOnePageOneActivity">
    <TextView
        android:id="@+id/createEventHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorCrystalWhite"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:text="@string/create_event"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/backFromCreateButton"
        android:backgroundTint="@color/colorCrystalWhite"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:clickable="true"
        app:fabSize="mini"
        android:onClick="toUserAreFromCreateActivity"
        app:srcCompat="@drawable/chevleft" />

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:ems="8"
        android:hint="@string/event_name"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/backFromCreateButton"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/cbEventPrivate"
        android:layout_width="78dp"
        android:layout_height="22dp"
        android:text="@string/event_private"
        android:layout_marginBottom="18dp"
        android:textColor="@color/colorPrimaryDarkGrey"
        android:layout_alignBaseline="@+id/etEventName"
        android:layout_alignBottom="@+id/etEventName"
        android:layout_alignParentEnd="true" />


    <AutoCompleteTextView
        android:id="@+id/etEventPlace"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:ems="8"
        android:inputType="textPersonName"
        android:hint="@string/event_place"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/etEventName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/etEventPrice"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:ems="8"
        android:hint="@string/event_price"
        android:inputType="number"
        android:layout_alignBaseline="@+id/etEventPlace"
        android:layout_alignBottom="@+id/etEventPlace"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/etEventStartDate"
        android:ems="8"
        android:hint="@string/event_date_hint"
        android:focusable="false"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:inputType="date"
        android:layout_alignBottom="@+id/etEventEndDate"
        android:layout_alignStart="@+id/etEventPlace" />


    <EditText
        android:id="@+id/etEventEndDate"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:ems="8"
        android:hint="@string/event_date_hint"
        android:focusable="false"
        android:inputType="date"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/etEventPlace"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etEventStartTime"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:ems="8"
        android:hint="@string/event_start_time"
        android:focusable="false"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/etEventType" />


    <EditText
        android:id="@+id/etEventEndTime"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:ems="8"
        android:hint="@string/event_end_time"
        android:focusable="false"
        android:layout_alignBaseline="@+id/etEventStartTime"
        android:layout_alignBottom="@+id/etEventStartTime"
        android:layout_alignEnd="@+id/etEventEndDate" />

    <AutoCompleteTextView

        android:id="@+id/etEventType"
        android:layout_width="111dp"
        android:layout_height="38dp"
        android:ems="8"
        android:focusable="false"
        android:hint="@string/event_type"
        android:inputType="textPersonName"
        android:layout_above="@+id/ttViewAddPic"
        android:layout_toStartOf="@+id/createEventHeader"
        android:layout_marginBottom="29dp" />

    <EditText
        android:id="@+id/etEventMaxAttendance"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:ems="8"
        android:hint="@string/event_max_attendance"
        android:inputType="number"
        android:layout_alignBaseline="@+id/etEventType"
        android:layout_alignBottom="@+id/etEventType"
        android:layout_alignStart="@+id/etEventEndDate" />




    <TextView
        android:id="@+id/ttViewAddPic"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:text="@string/event_pic"
        android:layout_alignBaseline="@+id/etEventDescription"
        android:layout_alignBottom="@+id/etEventDescription"
        android:layout_alignStart="@+id/etEventType" />

    <!--TODO : hämta events bild -->
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="106dp"
        android:layout_height="96dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/eventimage"
        android:layout_marginRight="8dp"
        android:layout_above="@+id/createEventButton"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etEventDescription"
        android:layout_width="219dp"
        android:layout_height="113dp"
        android:background="@drawable/border"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="top"
        android:lines="2"
        android:hint="@string/event_descr_hint"
        android:textSize="12sp"
        android:inputType="textMultiLine"
        android:layout_above="@+id/Next"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:onClick="createEventClick"
        android:text="@string/create_event"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />


    <TextView
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_invite"
        android:textSize="20sp"
        android:onClick="goToInviteFriends"
        android:layout_gravity="right|center_horizontal"
        android:clickable="true"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />




</RelativeLayout>